解决了密钥安全性问题，修改成从环境变量文件配置